--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@
 img{
     width: 100%;
 }
+a{
+    text-decoration: none;
+}
 /* sezioni */
 header ul{
     list-style: none;
@@ -21,6 +24,9 @@ header a{
 header{
     min-height: 85px;
     
+}
+footer{
+    min-height: 600px;
 }
 
 /* classi */
@@ -37,14 +43,23 @@ header{
     width: 90%;
 
 }
+.col-20{
+    border: 1px solid white;
+    width: 20%;
+    /* debug */
+    height: 300px;
+}
 .flex{
     display: flex;
     /* debug */
-    border: 1px solid black;
+    
     
 }
 .font-size-2-4rem{
     font-size: 2.4rem;
+}
+.font-size-big{
+    font-size: 4.7rem;
 }
 .gap-80{
     gap: 80px;
@@ -78,15 +93,18 @@ header{
     padding: 10px;
 
 }
+.margin-top{
+    margin-top: 50px;
+}
 /* larghezze */
 .width-100{
     width: 100%;
 }
 .width-60{
-    width: 60%;
+    width: 65%;
 }
 .width-40{
-    width: 40%;
+    width: 35%;
 }
 .width-30{
     width: 30%;
@@ -96,11 +114,17 @@ header{
 }
 .button-blue{
     padding: 10px 20px;
-    background-color: #1c5ec0;
+    background-color: #0061ff;
     margin-right: 20px;
+    display: inline-block;
+    color: white;
 }
+/* color */
 .text-white{
     color: white;
+}
+.blue{
+    color: blue;
 }
 /* sezione immagini */
 .img-logo{
@@ -116,7 +140,7 @@ header{
     height: 400px;
 }
 .min-h2{
-    height: 800px;
+    min-height: 800px;
 
 }
 .min-h3{
@@ -127,8 +151,9 @@ header{
 }
 /* bg-color */
 .bg-light-blue{
-    background-color: rgb(84, 156, 240);
+    background-color: #d7e6fb;
+    
 }
-.border-botton{
-    border-bottom: 1px solid black;
+.bg-black{
+    background-color: black;
 }
