--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,13 @@ img{
 a{
     text-decoration: none;
 }
+ul{
+    
+}
+li{
+    padding-top: 15px;
+}
+
 /* sezioni */
 header ul{
     list-style: none;
@@ -40,14 +47,14 @@ footer{
 }
 .column{
     margin: 0 auto;
-    width: 90%;
+    width: 80%;
 
 }
 .col-20{
     border: 1px solid white;
     width: 20%;
     /* debug */
-    height: 300px;
+    min-height: 300px;
 }
 .flex{
     display: flex;
@@ -80,21 +87,39 @@ footer{
     align-items: center;
 
 }
+.text-center{
+    text-align: center;
+}
 .paddin-top-100{
     padding-top: 100px;
 }
 .padding-top-50{
     padding-top: 50px;
 }
+.padding-top-30{
+    padding-top: 30px;
+}
 .padding-top-80{
     padding-top: 80px;
+}
+.{
+    padding-bottom: 100px;
 }
 .padding-10{
     padding: 10px;
 
 }
+.paddin-left{
+    padding-left: 20px;
+}
 .margin-top{
     margin-top: 50px;
+}
+.margin-top-100{
+    margin-top: 100px;
+}
+.margin-bottom{
+    margin-bottom: 100px;
 }
 /* larghezze */
 .width-100{
@@ -109,8 +134,8 @@ footer{
 .width-30{
     width: 30%;
 }
-.width-x3{
-    width: calc(100 / 3);
+.width-90{
+    width: 90%;
 }
 .button-blue{
     padding: 10px 20px;
@@ -119,12 +144,22 @@ footer{
     display: inline-block;
     color: white;
 }
+.border-bottom{
+    border-bottom: 1px solid black;
+}
+.border-botton-black{
+    padding-bottom: 50px;
+    border-bottom: 1px solid black;
+}
+.shopnow{
+    color: #0061ff;
+}
 /* color */
 .text-white{
     color: white;
 }
 .blue{
-    color: blue;
+    color: #0061ff;
 }
 /* sezione immagini */
 .img-logo{
@@ -137,14 +172,14 @@ footer{
     min-height: 1000px;
 }
 .min-h1{
-    height: 400px;
+    min-height: 400px;
 }
 .min-h2{
     min-height: 800px;
 
 }
 .min-h3{
-    height: 300px;
+    min-height: 300px;
 }
 .border{
     border: 1px solid black;
@@ -156,4 +191,25 @@ footer{
 }
 .bg-black{
     background-color: black;
+}
+/* lista */
+
+.lista-funzionalita li {
+  display: flex; 
+  align-items: center; 
+  margin-bottom: 20px; 
+  color: rgb(51, 51, 51); 
+}
+
+.lista-funzionalita .icona-utente,
+.lista-funzionalita .icona-spazio,
+.lista-funzionalita .icona-condivisione {
+  font-size: 1rem; 
+  margin-right: 10px; 
+  
+
+}
+.lista-funzionalita .icona-spazio,
+.lista-funzionalita .icona-condivisione{
+    margin-bottom: 20px;
 }
