--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ ul{
 li{
     padding-top: 15px;
 }
-
+p{
+    line-height:  23px;
+}
 /* sezioni */
 header ul{
     list-style: none;
@@ -110,7 +112,7 @@ footer{
 
 }
 .padding-top-10{
-    padding-top: 10px;
+    padding-top: 20px;
 
 }
 .paddin-left{
